--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <body>
 
-    <h1 class="title">Thành Viên Tổ  </h1>
+    <h1 class="title">Thành Viên Tổ 2 </h1>
 
     <div class="member-card">
         <img src="images/avatar1.png" class="avatar">
@@ -70,4 +70,5 @@
     </div>
 
 </body>
+
 </html>
