--- a/index.html
+++ b/index.html
@@ -28,34 +28,7 @@
             margin: 30px auto;
             padding: 25px;
             border-radius: 20px;
-            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-        }
-
-        .avatar {
-            width: 160px;
-        }
-
-        .name {
-            display: block;
-            font-size: 20px;
-            margin-top: 15px;
-            text-decoration: none;
-            color: #000;
-            font-weight: bold;
-        }
-
-        .name:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-
-<body>
-
-    <h1 class="title">Thành Viên Tổ 2 </h1>
-
-    <div class="member-card">
-        <img src="images/avatar1.png" class="avatar">
+            box-shadow: 0 6px 15px rgba(0,0,0,txt" class="avatar">
         <a href="#" class="name">Nguyễn Phương Diệu Linh  </a>
     </div>
 
@@ -72,3 +45,4 @@
 </body>
 
 </html>
+
