--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <div class="member-card">
         <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
-        <a href="dieulinh/index.com" class="name">Nguyễn Phương Diệu Linh  </a>
+        <a href="dieulinh/index.html" class="name">Nguyễn Phương Diệu Linh  </a>
     </div>
 
     <div class="member-card">
@@ -67,6 +67,7 @@
  </body>
 
 </html>
+
 
 
 
