--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <div class="member-card">
         <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
         <a href="dieulinh/Index.html" class="name">Nguyễn Phương Diệu Linh  </a>
+         <a href="dieuulinh/Giới thiệu CLB" class="name">Nguyễn Phương Diệu Linh  </a>
     </div>
 
     <div class="member-card">
@@ -67,6 +68,7 @@
  </body>
 
 </html>
+
 
 
 
