--- a/index.html
+++ b/index.html
@@ -63,10 +63,55 @@
         <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
         <a href="#" class="name">Nguyễn Phương Khánh Linh </a>
     </div>
-
- </body>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
+        <a href="#" class="name">Nguyễn Phương Khánh Linh </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Lê Phương Uyên" class="avatar">
+        <a href="#" class="name">Lê Phương Uyên </a>
+    </div>
+    <div class="member-card">
+        <img src="Avatar.l2.png" alt="Phạm Thị Kiều Oanh" class="avatar">
+        <a href="#" class="name">Phạm Thị Kiều Oanh </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Nguyễn Thị Hoa " class="avatar">
+        <a href="#" class="name">Nguyễn Thị Hoa </a>
+    </div>
+    <div class="member-card">
+        <img src="Avatar.l2.png" alt="Trần Quỳnh Như " class="avatar">
+        <a href="#" class="name">Trần Quỳnh Như </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Nguyễn Thị Hồng Thuỷ " class="avatar">
+        <a href="#" class="name">Nguyễn Thị Hồng Thuỷ </a>
+    </div>
+    <div class="member-card">
+        <img src="Avatar.l2.png" alt="Nguyễn Hoàng Anh " class="avatar">
+        <a href="#" class="name">Nguyễn Hoàng Anh </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Trương Anh Nhật " class="avatar">
+        <a href="#" class="name">Trương Anh Nhật </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Trần Thị Diệu Thảo " class="avatar">
+        <a href="#" class="name">Trần Thị Diệu Thảo </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Huỳnh Thị Mỹ Duyên " class="avatar">
+        <a href="#" class="name">Huỳnh Thị Mỹ Duyên </a>
+    </div>
+     <div class="member-card">
+        <img src="Avatar.l2.png" alt="Trần Thị Diệu Thuỳ " class="avatar">
+        <a href="#" class="name">Trần Thị Diệu Thuỳ </a>
+    </div>
+   
+      </body>
 
 </html>
+
 
 
 
