--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
             font-weight: bold;
         }
 
-        .member-card {CLB " class="name">Nguyễn Phương Diệu Linh  </a>
-</div>
+                .name:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
 
+<body>
+
+    <h1 class="title">Thành Viên Tổ 2</h1>
     <div class="member-card">
+        <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
+        <a href="dieulinh/Index.html" class="name">Nguyễn Phương Diệu Linh  </a>
+</div>
+<div class="member-card">
         <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
         <a href="#" class="name">Nguyễn Phương Khánh Linh </a>
     </div>
@@ -73,6 +83,7 @@
       </body>
 
 </html>
+
 
 
 
