--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <h1 class="title">Thành Viên Tổ 2</h1>
     <div class="member-card">
         <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
-        <a href="dieulinh/Index.html" class="name">Nguyễn Phương Diệu Linh  </a>
+        <a href="to2linh/index.html" class="name">Nguyễn Phương Diệu Linh  </a>
 </div>
 <div class="member-card">
         <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
@@ -83,6 +83,7 @@
       </body>
 
 </html>
+
 
 
 
