--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@
             margin: 0;
             font-weight: bold;
         }
+                .member-card {
+            background: white;
+            width: 320px;
+            margin: 30px auto;
+            padding: 25px;
+            border-radius: 20px;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+              }
+
+        .avatar {
+            width: 160px;
+        }
+
+        .name {
+            display: block;
+            font-size: 20px;
+            margin-top: 15px;
+            text-decoration: none;
+            color: #000;
+            font-weight: bold;
+        }
+
 
                 .name:hover {
             text-decoration: underline;
@@ -83,6 +105,7 @@
       </body>
 
 </html>
+
 
 
 
