--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1 class="title">Thành Viên Tổ 2</h1>
     <div class="member-card">
         <img src="Avatar.l1.png" alt="Nguyễn Phương Diệu Linh" class="avatar">
-        <a href="to2linh/baitap.html" class="name">Nguyễn Phương Diệu Linh  </a>
+        <a href="to2/baitap.html" class="name">Nguyễn Phương Diệu Linh  </a>
 </div>
 <div class="member-card">
         <img src="Avatar.l2.png" alt="Nguyễn Phương Khánh Linh" class="avatar">
@@ -105,6 +105,7 @@
       </body>
 
 </html>
+
 
 
 
