--- a/baitap.html
+++ b/baitap.html
@@ -16,7 +16,7 @@
     <h1>Bài Tập của Nguyễn Phương Diệu Linh</h1>
 
     <ul>
-        <li><a href="#">Bài tập 1</a></li>
+        <li><a href="CLB.html">Giới thiệu CLB</a></li>
         <li><a href="#">Bài tập 2</a></li>
         <li><a href="#">Bài tập 3</a></li>
     </ul>
