--- a/CLB.html
+++ b/CLB.html
@@ -28,7 +28,7 @@
 			<th>Thứ 2</th><th>Thứ 3</th><th>Thứ 4</th><th>Thứ 5</th><th>Thứ 6</th>
 		</tr>		
 		<tr>
-			<td>Bóng đá</td>
+			<td><a href="#bongda">Bóng đá</a></td>
 			<td>Thầy Khải</td>
 			<td></td>
 			<td>X</td>
@@ -76,5 +76,13 @@
 			<td>X</td>
 		</tr>
 	</table>
+	<h3 id="bongda"> CLB Bóng đá </h3>
+	<ul>
+		<li> Địa điểm: Sân thể thao của trường</li>
+		<li>Số thành viên: 20</li>
+		<li>Thành tích: 1 giải ba cấp thành phố</li>
+		<li>Phí hội viên: 100k/tháng </li>
+		<li>Điện thoại liên hệ: 01234567</li>
+	</ul>
 </body>
 </html>
