--- a/Thongtin.html
+++ b/Thongtin.html
@@ -8,12 +8,12 @@
   <tr><td>
 <h2>CLB Vovinam</h2> 
 <p align=“justify”>CLB Vovinam được thành lập vào ngày 28/3/2021 với đề xuất của học sinh và sự giúp đỡ từ BGH và Đoàn viên thanh niên của trường. Ngày đầu thành với số lượng 15 học sinh hỗ trợ lên ý tưởng xây dựng CLB. Sau 7 tháng thành lập CLB chào đồng thêm 50 thành viên mới. Vì tình hình dịch bệnh nên CLB hiện tại vẫn duy trì hình thức rèn luyện, sinh hoạt online. CLB Vovinam được thành lập với mục đích tạo sân chơi, rèn luyện thể dục thể thao, năm vào đực khỏe. Là nơi giao lưu , tập luyện và trao đổi học hỏi về võ thuật và thể dục thể thao của các bạn học sinh của trường.</p>
-<img src=“vovinam.jpg" width="50%">
+<img src=“vovinam.jpg"width="50%">
   </td></tr>
   <tr><td>
     <h2>CLB Karetedo</h2>
 <p align="justify">Câu lạc bộ Võ thuật có tên gọi là CLB Karatedo, với mục đích tạo ra sân chơi, nơi giao lưu, trao đổi học tập, rèn luyện thể dục thể thao cũng như phát triển phong trào TD-TT của trường. Được sự giúp đỡ của văn phòng Đoàn trường và được sự chấp thuận của Nhà Trường. Sau thời gian chiêu sinh kêu gọi và có màn biểu diễn đầu tiên tại khai giảng đón học sinh năm 2014-2015, CLB đã chào đón 16 bạn đầu tiên theo tập. Sau quãng thời gian hình thành và phát triển clb đã đón hơn 300 lượt sinh viên, học sinh, người lớn và thanh thiếu niên trên địa bàn tham gia tập luyện và thi đấu.Kỉ niệm năm thành lập CLB-sinh nhật CLB; Đây là một hoạt động thường niên nhằm nhìn lại chặng đường hoạt động của CLB từ lúc mới hình thành đến hiện tại, đồng thời đây cũng là cơ hội để tất cả mọi người có thể gặp mặt và kết nối lại với nha, đặc biệt là có giúp cho các võ sĩ mơi có dịp gặp gỡ và nói chuyện cùng với các chị cựu võ sĩ.Từ đó, có thể giúp cho các bạn dễ dàng hoà nhập và thoải mái thể hiện bản thân hơn.</p>
-<img src="karetedo.jpg"width="50%">
+<img src="karatedo.jpg"width="50%">
   </td></tr>
   <tr><td>
     <h2>CLB Bóng chuyền</h2>
