--- a/CLB.html
+++ b/CLB.html
@@ -17,6 +17,7 @@
 			<li>01 giải nhì, 02 giải ba hội thi biểu diễn âm nhạc cấp tỉnh</li>
 		</ul>
 <p><a href=>Theo dõi lịch hoạt động các CLB Thể thao</a></p>
+	<p><a href="Thongtin.html"=>Thông tin CLB</a></p>
 <table id="CLBTT" border="1">
 		<caption>Lịch hoạt động CLB thể thao</caption>
 		<tr style="border: 1px solid">
