--- a/CLB.html
+++ b/CLB.html
@@ -16,8 +16,8 @@
 			<li>01 giải ba môn Bóng đá nam cấp tỉnh</li>
 			<li>01 giải nhì, 02 giải ba hội thi biểu diễn âm nhạc cấp tỉnh</li>
 		</ul>
-<p><a href=>Theo dõi lịch hoạt động các CLB Thể thao</a></p>
-	<p><a href="Thongtin.html"=>Thông tin CLB</a></p>
+<p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
+	<p><a href="Thongtin.html">Thông tin CLB</a></p>
 
 	<h3 id="bongda"> CLB Bóng đá </h3>
 	<ul>
