--- a/Lich.html
+++ b/Lich.html
@@ -59,7 +59,7 @@
 			<td>X</td>
 		</tr>
 	</table>
-<a href="CLB.htm">Quay về trang chủ </a>
+<a href="CLB.html">Quay về trang chủ </a>
 	</body>
 </html>
 
