--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         .title {
-            background: #2ecc71;
+            background: #ff6b81;
             color: white;
             padding: 20px;
             font-size: 30px;
@@ -105,6 +105,7 @@
       </body>
 
 </html>
+
 
 
 
