--- a/CLB.html
+++ b/CLB.html
@@ -27,5 +27,37 @@
 		<li>Phí hội viên: 100k/tháng </li>
 		<li>Điện thoại liên hệ: 01234567</li>
 	</ul>
+	<h3 id="bongchuyen"> CLB Bóng chuyền </h3>
+	<ul>
+		<li> Địa điểm: Sân thể thao của trường</li>
+		<li>Số thành viên: 40</li>
+		<li>Thành tích: không </li>
+		<li>Phí hội viên: 100k/tháng </li>
+		<li>Điện thoại liên hệ: 01234568</li>
+	</ul>
+	<h3 id="bongro"> CLB  Bóng rổ</h3>
+	<ul>
+		<li> Địa điểm: Sân thể thao của trường</li>
+		<li>Số thành viên: 30</li>
+		<li>Thành tích: Không </li>
+		<li>Phí hội viên: 100k/tháng </li>
+		<li>Điện thoại liên hệ: 01234563</li>
+	</ul>
+	<h3 id="vothuat"> CLB Võ thuật </h3>
+	<ul>
+		<li> Địa điểm: Nhà thi đấu của trường</li>
+		<li>Số thành viên: 25</li>
+		<li>Thành tích: 2 HCV,6 HCB và 5 HCĐ cấp thành phố </li>
+		<li>Phí hội viên: 50k/tháng </li>
+		<li>Điện thoại liên hệ: 01234565</li>
+	</ul>
+	<h3 id="boiloi"> CLB  Bơi lội </h3>
+	<ul>
+		<li> Địa điểm: Bể bơi của trường</li>
+		<li>Số thành viên: 20</li>
+		<li>Thành tích: 1 HCB cấp tỉnh </li>
+		<li>Phí hội viên: 80k/tháng </li>
+		<li>Điện thoại liên hệ: 01234569</li>
+	</ul>
 </body>
 </html>
