--- a/CLB.html
+++ b/CLB.html
@@ -18,6 +18,65 @@
 		</ul>
 <p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
 	<p><a href="Thongtin.html">Thông tin CLB</a></p>
+	<table id="CLBTT" border="1">
+		<caption>Lịch hoạt động CLB thể thao</caption>
+		<tr bgcolor="lavender">
+			<th rowspan="2">Bộ môn</th>
+			<th rowspan="2">GV phụ trách</th>
+			<th colspan="5">Ngày</th>
+		</tr>
+		<tr bgcolor="pink">
+			<th>Thứ 2</th><th>Thứ 3</th><th>Thứ 4</th><th>Thứ 5</th><th>Thứ 6</th>
+		</tr>		
+		<tr>
+			<td><a href="#bongda">Bóng đá</a></td>
+			<td>Thầy Khải</td>
+			<td></td>
+			<td>X</td>
+			<td></td>
+			<td></td>
+			<td>X</td>
+		</tr>
+		<tr>
+			<td><a href="#bongchuyen">Bóng chuyền</a></td>
+			<td>Cô Lan</td>
+			<td>X</td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><a href="#bongro">Bóng rổ </a></td>
+			<td>Thầy Vũ</td>
+			<td></td>
+			<td></td>
+			<td>X</td>
+			<td></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><a href="#vothuat">Võ thuật</a></td>
+			<td>Thầy Hoàng - Karatedo<br/>
+				Thầy Đức - Taekwondo<br>
+				Thầy Thắng - Vovinam
+			</td>
+			<td>X</td>
+			<td>X</td>
+			<td></td>
+			<td>X</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><a href="#boiloi">Bơi </a></td>
+			<td>Cô Bích</td>
+			<td></td>
+			<td></td>
+			<td>X</td>
+			<td></td>
+			<td>X</td>
+		</tr>
+	</table>
 
 	<h3 id="bongda"> CLB Bóng đá </h3>
 	<ul>
