--- a/banthan.html
+++ b/banthan.html
@@ -75,7 +75,7 @@
 
     <h2>Mạnh Tiểu Vũ</h2>
 
-<a href="tieu_su/index.html" class="circle blue">Tiểu sử</a>
+<a href="tieu_su.html" class="circle blue">Tiểu sử</a>
 <a href="so_thich/index.html" class="circle red">Sở thích</a>
 <a href="uoc_mo/index.html" class="circle yellow">Ước mơ</a>
 
