--- a/banthan.html
+++ b/banthan.html
@@ -74,7 +74,7 @@
     <img src="avatar.png" class="avatar">
 
     <h2>Nguyễn Phương Diệu Linh</h2>
-
+<img src="avt.HEIC" class="avatar">
 <a href="tieu_su.html" class="circle blue">Tiểu sử</a>
 <a href="so_thich.html" class="circle red">Sở thích</a>
 <a href="uoc_mo.html" class="circle yellow">Ước mơ</a>
