--- a/banthan.html
+++ b/banthan.html
@@ -65,16 +65,32 @@
     text-decoration: none; 
     color: white;         
 }
+        .profile-row {
+    display: flex;
+    align-items: center;       
+    justify-content: center;    
+    gap: 25px;                  
+    margin-top: 20px;
+}
+
+.button-group {
+    display: flex;
+    gap: 15px;                 
+}
 
     </style>
 </head>
 
 <body>
+    
   <h2>Nguyễn Phương Diệu Linh</h2>
+    <div class="profile-row">
 <img src="avt.HEIC" class="avatar">
+        <div class="button-group">
 <a href="tieu_su.html" class="circle blue">Tiểu sử</a>
 <a href="so_thich.html" class="circle red">Sở thích</a>
 <a href="uoc_mo.html" class="circle yellow">Ước mơ</a>
-
+        </div>
+    </div>
 </body>
 </html>
