--- a/banthan.html
+++ b/banthan.html
@@ -78,18 +78,23 @@
     gap: 15px;                 
 }
         
-.name {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 26px;
-    font-weight: 700;
-}
+
     </style>
 </head>
 
 <body>
     
-  <h2 class="name">Nguyễn Phương Diệu Linh</h2>
+  <h2 Tóm tắt tiểu sử</h2>
+      <ul>
+          <li>Họ và tên: Nguyễn Phương Diệu Ling</li>
+          <li>Ngày sinh:12/06/2008</li>
+          <li>Quê quán: Ninh Bình </li>
+          <li>Cung hoàng đạo: Song tử</li>
+          <li>Học tại: THPT Hoàng Hoa Thám</li>
+          <li>Môn học yêu thích: Toán, lý</li>
+          <li>Sở thích: xem phim, đọc sách</li>
+          <li>Ước mơ: Doanh nhân</li>
+      </ul>
     <div class="profile-row">
 <img src="avt.HEIC" class="avatar">
         <div class="button-group">
@@ -98,5 +103,12 @@
 <a href="uoc_mo.html" class="circle yellow">Ước mơ</a>
         </div>
     </div>
+      <tr>
+          <td> colspan="2">
+              <h2>Giới thiệu bản thân</h2>
+              <p align="justify" style="font-size:large">Mình là Nguyễn Phương Diệu Linh, một Song Tử đầy năng lượng và luôn tò mò về thế giới. Mình thích phong cách old money, yêu sự tinh tế và thanh lịch. Mình có niềm đam mê đặc biệt với châu Âu, nhất là Thụy Sĩ, và luôn mong một ngày được tận mắt ngắm cực quang. Trong cuộc sống, mình là người hướng tới sự hiểu biết, giao tiếp chân thành và những kết nối có ý nghĩa.</p>
+              <h3>Phim yêu thích</h3>
+          </td>
+      </tr>
 </body>
 </html>
