--- a/banthan.html
+++ b/banthan.html
@@ -104,7 +104,7 @@
         </div>
     </div>
       <tr>
-          <td> colspan="2">
+          <td colspan="2">
               <h2>Giới thiệu bản thân</h2>
               <p align="justify" style="font-size:large">Mình là Nguyễn Phương Diệu Linh, một Song Tử đầy năng lượng và luôn tò mò về thế giới. Mình thích phong cách old money, yêu sự tinh tế và thanh lịch. Mình có niềm đam mê đặc biệt với châu Âu, nhất là Thụy Sĩ, và luôn mong một ngày được tận mắt ngắm cực quang. Trong cuộc sống, mình là người hướng tới sự hiểu biết, giao tiếp chân thành và những kết nối có ý nghĩa.</p>
               <h3>Phim yêu thích</h3>
