--- a/banthan.html
+++ b/banthan.html
@@ -126,7 +126,10 @@
             Mình coi trọng sự hiểu biết, giao tiếp chân thành và những kết nối đẹp trong cuộc sống.
         </p>
 
-        <h3>Phim yêu thích</h3>
+        <h3>Kênh Yêu Thích </h3>
+        <video src="kenhyeuthich .MOV"
+            width="500"height="300"autoplay>
+        </video>
     </div>
 
 </body>
