--- a/baitap1.html
+++ b/baitap1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Bài Tập - Nguyễn Phương Diệu Linh</title>
+    <title>Bài Tập - Nguyễn Phương Khánh Linh</title>
     <style>
     body {
         font-family: 'Poppins', Arial;
