--- a/banthan.html
+++ b/banthan.html
@@ -107,7 +107,7 @@
     </ul>
 
     <div class="profile-row">
-        <img src="avt.HEIC" class="avatar">
+        <img src="avt2.HEIC" class="avatar">
 
         <div class="button-group">
             <a href="tieu_su.html" class="circle pink">Tiểu sử</a>
