--- a/so_thich1.html
+++ b/so_thich1.html
@@ -8,8 +8,8 @@
 <li>Học ngoại ngữ</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <video src="nhacyeuthich1.MOV"
-    ưidth="500"height="300"autoplay>
-  </video>
+  <audio src="ghiam2.mp4"
+    controls autoplay muted>
+  </audio>
 </body>
 </html>
