--- a/banthan1.html
+++ b/banthan1.html
@@ -15,7 +15,7 @@
 
         h2 {
             text-align: center;
-            color: #5baac7; /* xanh pastel nổi bật */
+            color: #5baac7; 
             margin-bottom: 10px;
         }
 
@@ -35,7 +35,7 @@
             object-fit: cover;
             display: block;
             margin: 0 auto;
-            border: 5px solid #e5f9ff; /* viền xanh nhạt */
+            border: 5px solid #e5f9ff; 
             box-shadow: 0 4px 10px rgba(120,180,200,0.2);
         }
 
@@ -108,7 +108,7 @@
     </ul>
 
     <div class="profile-row">
-        <img src="avt1.HEIC" class="avatar">
+        <img src="avt2.HEIC" class="avatar">
 
         <div class="button-group">
             <a href="tieu_su1.html" class="circle green">Tiểu sử</a>
@@ -127,7 +127,10 @@
             được kết nối với thế giới, đi nhiều nơi và tạo ra những giá trị tích cực.
         </p>
 
-        <h3>Phim yêu thích</h3>
+        <h3>Kênh yêu thích</h3>
+        <video src="kenhyeuthich1.MOV"
+            width="500"height="300"autoplay>
+        </video>
     </div>
 
 </body>
