--- a/so_thich.html
+++ b/so_thich.html
@@ -8,7 +8,7 @@
 <li>Thể thao</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <audio src="ghiam1.mp4"
+  <audio src="ghiam1.mp4a"
     controls autoplay muted>
   </audio>
 </body>
