--- a/so_thich1.html
+++ b/so_thich1.html
@@ -8,7 +8,7 @@
 <li>Học ngoại ngữ</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <audio src="ghiam2.mp4"
+  <audio src="ghiam2.mp4a"
     controls autoplay muted>
   </audio>
 </body>
