--- a/so_thich1.html
+++ b/so_thich1.html
@@ -8,8 +8,8 @@
 <li>Học ngoại ngữ</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
-  <audio src="ghiam2.mp4a"
-    controls autoplay muted>
+  <audio controls autoplay muted>
+   <source src="ghiam2.mp4" type="audio">
   </audio>
 </body>
 </html>
