--- a/so_thich1.html
+++ b/so_thich1.html
@@ -9,7 +9,7 @@
 </ul>
   <h3>Bài hát yêu thích</h3>
   <audio controls autoplay muted>
-   <source src="ghiam2.mp4" type="audio">
+   <source src="ghiam2.mp4a" type="audio">
   </audio>
 </body>
 </html>
