--- a/so_thich.html
+++ b/so_thich.html
@@ -9,7 +9,7 @@
 </ul>
   <h3>Bài hát yêu thích</h3>
  <audio controls autoplay muted>
-   <source src="ghiam1.mp4" type="audio">
+   <source src="ghiam1.mp4a" type="audio">
   </audio>
 </body>
 </html>
