--- a/so_thich.html
+++ b/so_thich.html
@@ -8,8 +8,8 @@
 <li>Thể thao</li>
 </ul>
   <h3>Bài hát yêu thích</h3>
- <audio controls autoplay muted>
-   <source src="ghiam1.mp4a" type="audio">
+ <audio controls autoplay >
+   <source src="ghiam1.mp3" type="audio/mpeg">
   </audio>
 </body>
 </html>
