--- a/baitap.html
+++ b/baitap.html
@@ -89,6 +89,11 @@
         <li><a href="Thongtin.html">Thông tin CLB</a></li>
         <li><a href="Lich.html"> Lịch hoạt động CLB</a></li>
         <li><a href="banthan.html">Giới thiệu bản thân</a></li>
+        <li><a href="nvu3b9.html">Nhiệm vụ 3 bài 9 </a></li>
+        <li><a href="vandungb8.hmtl"> Vận dụng bài 8</a></li>
+        <li><a href="thuchanhb8.html">Thực hành bài 8</a></li>
+        <li><a href="luyentapb8.html"> Luyện tập bài 8 </a></li>
+        <li><a href="thuchanhbai9.html"> Thực hành bài 9</a></li>
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
