--- a/nvu3b9.html
+++ b/nvu3b9.html
@@ -8,5 +8,6 @@
     <a href="nghe_thuat.html" target="iframe"> Câu lạc bộ Nghệ thuật</a>
     <br>
     <iframe name ="iframe" width="60%" height="700"></iframe>
+    <a href="CLB.html">Quay về trang chủ </a>
   </body>
 </html>
