--- a/thuchanhb8.html
+++ b/thuchanhb8.html
@@ -10,6 +10,6 @@
 <p>+Nếu <b>delta</b> <0: Phương trình <i>vô nghiệm </i><br>
 + Nếu <b>delta</b>=0: Phương trình có<i> nghiệm duy nhất </i><br>
 + Nếu <b>delta</b> >0: Phương trình có hai <i> nghiệm phân biệt</i></p>
-  <a href="index.html">Quay về trang chủ </a>
+  <a href="baitap.html">Quay về trang chủ </a>
 </body>
 </html>
