--- a/baitap1.html
+++ b/baitap1.html
@@ -89,6 +89,10 @@
         <li><a href="Thongtin.html">Thông tin CLB</a></li>
         <li><a href="Lich.html"> Lịch hoạt động CLB</a></li>
         <li><a href="banthan1.html">Giới thiệu bản thân</a></li>
+          <li><a href="nvu3b91.html">Nhiệm vụ 3 bài 9 </a></li>
+        <li><a href="thuchanhb81.html">Thực hành bài 8</a></li>
+        <li><a href="luyentapb81.html"> Luyện tập bài 8 </a></li>
+        <li><a href="thuchanhbai91.html"> Thực hành bài 9</a></li>
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
