--- a/CLB.html
+++ b/CLB.html
@@ -16,6 +16,9 @@
 			<li>01 giải ba môn Bóng đá nam cấp tỉnh</li>
 			<li>01 giải nhì, 02 giải ba hội thi biểu diễn âm nhạc cấp tỉnh</li>
 		</ul>
+	  <video src="clb.mov"
+            width="500"height="300"autoplay>
+        </video>
 <p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
 	<p><a href="Thongtin.html">Thông tin CLB</a></p>
 	<table id="CLBTT" border="1">
