--- a/baitap1.html
+++ b/baitap1.html
@@ -93,7 +93,7 @@
         <li><a href="thuchanhb81.html">Thực hành bài 8</a></li>
         <li><a href="luyentapb81.html"> Luyện tập bài 8 </a></li>
         <li><a href="thuchanhbai91.html"> Thực hành bài 9</a></li>
-        <li><a href="vandungbai91.html"> Vận dụng bài 9 </li>
+        <li><a href="vandungb91.html"> Vận dụng bài 9 </li>
       <a href="index.html" class="back-home">⬅ Quay về trang chủ</a>
     </ul>
     </div>
