--- a/CLB.html
+++ b/CLB.html
@@ -58,6 +58,9 @@
 			<td></td>
 			<td></td>
 		</tr>
+		  <video src="clb2.mov"
+            width="500"height="300"autoplay>
+        </video>
 		<tr>
 			<td><a href="#vothuat">Võ thuật</a></td>
 			<td>Thầy Hoàng - Karatedo<br/>
