--- a/tieu_su.html
+++ b/tieu_su.html
@@ -7,5 +7,7 @@
 <li>Quê quán: Ninh Bình</li>
 <li>Cung hoàn đạo:Song Tử</li>
 </ul>
+  <img src="a2.jpg"width="50%">
+  <img src="a3.jpg"width="50%">
 </body>
 </html>
