--- a/tieu_su1.html
+++ b/tieu_su1.html
@@ -1,5 +1,26 @@
 <html>
 <body>
+    <style>
+.image-container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    .image-container img {
+        width: 45%;
+        max-width: 300px;
+        border-radius: 15px;
+        box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+        transition: transform 0.3s;
+    }
+
+    .image-container img:hover {
+        transform: scale(1.05);
+    }
+
+</style>
 <h2> Tiểu Sử</h2>
 <ul>
 <li> Họ và tên: Nguyễn Phương Khánh Linh</li>
@@ -7,7 +28,10 @@
 <li>Quê quán: Ninh Bình</li>
 <li>Cung hoàn đạo:Song Tử</li>
 </ul>
-  <img src="a5.jpg"width="50%">
-  <img src="a6.jpg"width="50%">
+<div class="image-container">
+    <img src="a2.jpg">
+    <img src="a3.jpg">
+</div>
+  
 </body>
 </html>
