--- a/banthan.html
+++ b/banthan.html
@@ -127,7 +127,7 @@
         </p>
 
         <h3>Kênh Yêu Thích </h3>
-        <video src="kenhyeuthich .MOV"
+        <video src="kenh%20.mp4"
             width="500"height="300"autoplay>
         </video>
     </div>
