--- a/banthan1.html
+++ b/banthan1.html
@@ -128,7 +128,7 @@
         </p>
 
         <h3>Kênh yêu thích</h3>
-        <video src="kenhyeuthich1.MOV"
+        <video src="kenhyeuthich1.mp4"
             width="500"height="300"autoplay>
         </video>
     </div>
