--- a/banthan.html
+++ b/banthan.html
@@ -127,7 +127,7 @@
         </p>
 
         <h3>Kênh Yêu Thích </h3>
-        <video width="500"height="300"autoplay>
+        <video width="500"height="300"autoplay controls>
             <source src="kenh%20.mp4" type="video/mp4">
         </video>
     </div>
