--- a/banthan1.html
+++ b/banthan1.html
@@ -128,7 +128,7 @@
         </p>
 
         <h3>Kênh yêu thích</h3>
-        <video width="500"height="300"autoplay>
+        <video width="500"height="300"autoplay controls>
             <source src="kenhyeuthich1.mp4" type="video/mp4">
         </video>
     </div>
