--- a/banthan.html
+++ b/banthan.html
@@ -127,8 +127,8 @@
         </p>
 
         <h3>Kênh Yêu Thích </h3>
-        <video width="500"height="300"autoplay controls>
-            <source src="kenh%20.mp4" type="video/mp4">
+        <video width="500"height="300" autoplay muted controls>
+            <source src="kenh.mp4" type="video/mp4">
         </video>
     </div>
 <a href="baitap.html">Quay về trang chủ </a>
