--- a/banthan.html
+++ b/banthan.html
@@ -128,7 +128,7 @@
 
         <h3>Kênh Yêu Thích </h3>
         <video width="500"height="300" autoplay muted controls>
-            <source src="kenh.mp4" type="video/mp4">
+            <source src="Kenh .mp4" type="video/mp4">
         </video>
     </div>
 <a href="baitap.html">Quay về trang chủ </a>
