--- a/CLB.html
+++ b/CLB.html
@@ -22,7 +22,14 @@
 	<video width="500"height="300" autoplay muted controls>
 			  <source src="clb2.mp4" type="video/mp4">
         </video>
-<p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
+	
+    <h2> Câu lạc bộ ngoại khoá của Trường Nguyễn Bỉnh Khiêm</h2>
+    <a href="the_thao.html" target="iframe">Câu lạc bộ Thể Thao</a>
+    <a href="nghe_thuat.html" target="iframe"> Câu lạc bộ Nghệ thuật</a>
+    <br>
+    <iframe name ="iframe" width="60%" height="700"></iframe>
+    
+  <p><a href="Lich.html">Theo dõi lịch hoạt động các CLB Thể thao</a></p>
 	<p><a href="Thongtin.html">Thông tin CLB</a></p>
 	<table id="CLBTT" border="1">
 		<caption>Lịch hoạt động CLB thể thao</caption>
